<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:text=""
            android:id="@+id/textView"
            android:textSize="@dimen/textsize"
            android:maxLength="57"
            android:background="@color/light_blue"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button7"
                android:textSize="@dimen/textsize"
                android:id="@+id/button7"
                android:onClick="@string/click"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button8"
                android:textSize="@dimen/textsize"
                android:id="@+id/button8"
                android:onClick="@string/click"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button9"
                android:textSize="@dimen/textsize"
                android:id="@+id/button9"
                android:onClick="@string/click"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_divided"
                android:textSize="@dimen/textsize"
                android:id="@+id/button_devided"
                android:onClick="@string/operation"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button4"
                android:textSize="@dimen/textsize"
                android:id="@+id/button4"
                android:onClick="@string/click"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button5"
                android:textSize="@dimen/textsize"
                android:id="@+id/button5"
                android:onClick="@string/click"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button6"
                android:textSize="@dimen/textsize"
                android:id="@+id/button6"
                android:onClick="@string/click"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_multiplied"
                android:textSize="@dimen/textsize"
                android:id="@+id/button_multiplied"
                android:onClick="@string/operation"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button1"
                android:textSize="@dimen/textsize"
                android:id="@+id/button1"
                android:onClick="@string/click"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button2"
                android:textSize="@dimen/textsize"
                android:id="@+id/button2"
                android:onClick="@string/click"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button3"
                android:textSize="@dimen/textsize"
                android:id="@+id/button3"
                android:onClick="@string/click"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_minus"
                android:textSize="@dimen/textsize"
                android:id="@+id/minus"
                android:onClick="@string/operation"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_clear"
                android:textSize="@dimen/textsize"
                android:id="@+id/button_clear"
                android:onClick="clear"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button0"
                android:textSize="@dimen/textsize"
                android:id="@+id/button0"
                android:onClick="@string/click"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_small_number"
                android:textSize="@dimen/textsize"
                android:id="@+id/button_small_number"
                android:onClick="@string/period"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_plus"
                android:textSize="@dimen/textsize"
                android:id="@+id/button_plus"
                android:onClick="@string/operation"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_equals"
            android:textSize="@dimen/textsize"
            android:id="@+id/button_equals"
            android:onClick="@string/equals"
            />
    </LinearLayout>

</RelativeLayout>
